@@ -3,7 +3,6 @@ package forge.deck;
 import com.badlogic.gdx.Input.Keys;
 import com.badlogic.gdx.math.Vector2;
 import com.badlogic.gdx.utils.Align;
-import com.google.common.collect.ImmutableList;
 import forge.Forge;
 import forge.Forge.KeyInputAdapter;
 import forge.Graphics;
@@ -67,7 +66,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         }
 
         public ItemPool<PaperCard> getCardPool() {
-            return FModel.getAllCardsNoAlt();
+            return FModel.getAllCards();
         }
         protected Predicate<PaperCard> getCardFilter() { return null; }
 
@@ -463,12 +462,15 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         tabPages.stream().map(DeckEditorPage.class::cast).forEach(DeckEditorPage::initialize);
         tabsInitialized = true;
 
-        //Pick an initial page to show. Test for catalog page so we don't switch off a draft screen.
-        if(!tabPages.isEmpty() && tabPages.get(0) instanceof CatalogPage) { //DraftPackPage is also a CatalogPage
-            if(mainDeckPage != null && mainDeckPage.cardManager.getItemCount() > 0)
+        //Pick an initial page to show.
+        if(!tabPages.isEmpty()) {
+            if(isDraftEditor() && isDrafting() && catalogPage != null)
+                setSelectedPage(catalogPage);
+            else if(mainDeckPage != null && mainDeckPage.cardManager.getItemCount() > 0)
                 setSelectedPage(mainDeckPage);
             else if(sideboardPage != null && sideboardPage.cardManager.getItemCount() > 0)
                 setSelectedPage(sideboardPage);
+            //Otherwise we just show whatever tab is first.
         }
 
         //Show any extra sections that are currently in use.
@@ -637,6 +639,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                     );
                 }
                 addItem(new FMenuItem(localizer.getMessage("btnCopyToClipboard"), Forge.hdbuttons ? FSkinImage.HDEXPORT : FSkinImage.BLANK, e -> FDeckViewer.copyDeckToClipboard(deck)));
+                addItem(new FCheckBoxMenuItem(localizer.getMessage("lblGroupIdenticalCards"), getGroupIdenticalCards(), e -> toggleGroupIdenticalCards()));
                 boolean devMode = FModel.getPreferences().getPrefBoolean(FPref.DEV_MODE_ENABLED);
                 if(!FModel.getPreferences().getPrefBoolean(FPref.ENFORCE_DECK_LEGALITY) || devMode)
                     addItem(new FCheckBoxMenuItem(localizer.getMessage("cbEnforceDeckLegality"), shouldEnforceConformity(), e -> toggleConformity()));
@@ -699,6 +702,20 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             tags.add(DECK_TAG_SUPPRESS_CONFORMITY);
         if(getCatalogPage() != null)
             getCatalogPage().scheduleRefresh(); //Refresh to update commander options.
+    }
+
+    protected boolean getGroupIdenticalCards() {
+        return FModel.getPreferences().getPrefBoolean(FPref.UI_GROUP_IDENTICAL_CARDS);
+    }
+
+    protected void toggleGroupIdenticalCards() {
+        FModel.getPreferences().togglePrefBoolean(FPref.UI_GROUP_IDENTICAL_CARDS);
+
+        for (TabPage<FDeckEditor> tabPage  : tabPages) {
+            if (tabPage instanceof CardManagerPage cmp) {
+                cmp.cardManager.updateView(false, null);
+            }
+        }
     }
 
     protected void showDevAddCardDialog() {
@@ -979,7 +996,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         save(null);
     }
 
-    private final static ImmutableList<String> onCloseOptions = ImmutableList.of(
+    private final static List<String> onCloseOptions = List.of(
         Localizer.getInstance().getMessage("lblSave"),
         Localizer.getInstance().getMessage("lblDontSave"),
         Localizer.getInstance().getMessage("lblCancel")
@@ -1510,7 +1527,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         }
 
         protected void addCommanderItems(final FDropDownMenu menu, final PaperCard card) {
-            if(!parentScreen.isCommanderEditor())
+            if(!parentScreen.isCommanderEditor() || parentScreen.getCommanderPage() == null)
                 return;
             if(parentScreen.getMaxMovable(card, this, parentScreen.getCommanderPage()) <= 0)
                 return;
@@ -2057,6 +2074,17 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         }
 
         protected void addPerCardItems(FDropDownMenu menu, PaperCard card) {
+            Deck currentDeck = parentScreen.getDeck();
+            if (currentDeck != null) {
+                // Add key card toggle option
+                boolean isKeyCard = currentDeck.getKeyCards().stream().anyMatch(name -> name.equalsIgnoreCase(card.getName()));
+                String keyCardLabel = isKeyCard ? Forge.getLocalizer().getMessage("lblRemoveKeyCard") : Forge.getLocalizer().getMessage("lblAddKeyCard");
+                
+                menu.addItem(new FMenuItem(keyCardLabel, Forge.hdbuttons ? FSkinImage.HDPREFERENCE : FSkinImage.SETTINGS, e -> {
+                    toggleCardKeyCard(currentDeck, card, isKeyCard);
+                }));
+            }
+
             int markedColorCount = card.getRules().getSetColorID();
             if (markedColorCount > 0) {
                 menu.addItem(new FMenuItem(Forge.getLocalizer().getMessage("lblColorIdentity"), Forge.hdbuttons ? FSkinImage.HDPREFERENCE : FSkinImage.SETTINGS, e -> {
@@ -2140,6 +2168,24 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
             }).handleEvent(e);
         }
 
+        private void toggleCardKeyCard(final Deck deck, final PaperCard card, boolean isCurrentlyKeyCard) {
+            String cardName = card.getName();
+            
+            if (isCurrentlyKeyCard) {
+                // Remove from key cards
+                deck.removeKeyCard(cardName);
+            } else {
+                // Add to key cards
+                deck.addKeyCard(cardName);
+            }
+            
+            // Mark deck as modified so it will be saved
+            parentScreen.getDeckController().notifyModelChanged();
+            
+            // Refresh the view to show updated status
+            cardManager.refresh();
+        }
+
         private boolean isPartnerCommander(final PaperCard card) {
             if (!parentScreen.isCommanderEditor() || parentScreen.getDeck().getCommanders().isEmpty()) {
                 return false;
@@ -2163,6 +2209,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
         public DraftPackPage(CardManager cardManager) {
             super(cardManager, ItemManagerConfig.DRAFT_PACK, Localizer.getInstance().getMessage("lblPackN", String.valueOf(1)), FSkinImage.PACK);
             cardManager.setShowRanking(true);
+            cardManager.setAllowGroupIdentical(false);
         }
 
         @Override
@@ -2193,6 +2240,7 @@ public class FDeckEditor extends TabPageScreen<FDeckEditor> {
                 draft.postDraftActions();
                 hideTab(); //hide this tab page when finished drafting
                 parentScreen.completeDraft();
+                return; // pool is null; do not fall through to cardManager.setPool(pool) below
             }
 
             this.draftingFaceDown = getDraftPlayer().hasArchdemonCurse();
